log
Thu Apr  7 15:12:37 UTC 2022: 
 tests:  0|6
total_score: 0/70
a85f98d
Thu Apr  7 15:26:24 UTC 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:0:
test.c: In function ‘createMap’:
hashmap.c:57:15: error: ‘new’ is used uninitialized in this function [-Werror=uninitialized]
   new->current=-1;
   ~~~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
79b4229
Thu Apr  7 15:32:57 UTC 2022: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: ‘*new->buckets’ is a pointer; did you mean to use ‘->’?
   new->buckets->key=NULL;
               ^~
               ->
Compilation failed
9c1c0ac
Thu Apr  7 15:33:09 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
14d6a48
Thu Apr  7 15:33:18 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ca97b3d
Thu Apr  7 15:37:41 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: array subscript is not an integer
   new->buckets[NULL];
               ^
Compilation failed
0c2afa7
Thu Apr  7 15:37:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: statement with no effect [-Werror=unused-value]
   new->buckets[10];
   ~~~~~~~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
f25a1c9
Thu Apr  7 15:40:36 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:30: error: ‘capcity’ undeclared (first use in this function); did you mean ‘capacity’?
   new->buckets=(Pair*)malloc(capcity*sizeof(pair));
                              ^~~~~~~
                              capacity
hashmap.c:59:30: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:45: error: ‘pair’ undeclared (first use in this function); did you mean ‘Pair’?
   new->buckets=(Pair*)malloc(capcity*sizeof(pair));
                                             ^~~~
                                             Pair
Compilation failed
d6fb421
Thu Apr  7 15:40:45 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:30: error: ‘capcity’ undeclared (first use in this function); did you mean ‘capacity’?
   new->buckets=(Pair*)malloc(capcity*sizeof(Pair));
                              ^~~~~~~
                              capacity
hashmap.c:59:30: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b457b91
Thu Apr  7 15:40:54 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:59:15: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
   new->buckets=(Pair*)malloc(capacity*sizeof(Pair));
               ^
cc1: all warnings being treated as errors
Compilation failed
86fdfbb
Thu Apr  7 15:41:14 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0af0bb3
Thu Apr  7 15:49:16 UTC 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
dfa5159
Thu Apr  7 16:05:12 UTC 2022: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:26: error: expected ‘)’ before ‘!’ token
   while(map->buckets[idx]!NULL && map->buckets[idx]->key !=NULL){
                          ^
hashmap.c:45:21: error: ‘mao’ undeclared (first use in this function); did you mean ‘map’?
     if(is_equal(key,mao->buckets[idx]->key)==1) return;
                     ^~~
                     map
hashmap.c:45:21: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:46:10: error: ‘idk’ undeclared (first use in this function); did you mean ‘idx’?
     idx=(idk+1)%map->capacity;
          ^~~
          idx
hashmap.c:48:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(map->buckets[idx]!=NULL)
   ^~
hashmap.c:50:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     map->buckets[idx]->value=value;
     ^~~
hashmap.c:51:3: error: ‘else’ without a previous ‘if’
   else createpair(key,value);
   ^~~~
hashmap.c:51:8: error: implicit declaration of function ‘createpair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   else createpair(key,value);
        ^~~~~~~~~~
        createPair
cc1: all warnings being treated as errors
Compilation failed
3a85d3a
Thu Apr  7 16:06:06 UTC 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:48:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   if(map->buckets[idx]!=NULL)
   ^~
hashmap.c:50:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
     map->buckets[idx]->value=value;
     ^~~
hashmap.c:51:3: error: ‘else’ without a previous ‘if’
   else createpair(key,value);
   ^~~~
hashmap.c:51:8: error: implicit declaration of function ‘createpair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   else createpair(key,value);
        ^~~~~~~~~~
        createPair
cc1: all warnings being treated as errors
Compilation failed
5ae266a
Thu Apr  7 16:06:31 UTC 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:9: error: implicit declaration of function ‘createpair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   }else createpair(key,value);
         ^~~~~~~~~~
         createPair
cc1: all warnings being treated as errors
Compilation failed
278a57e
Thu Apr  7 16:06:43 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9e2ad2c
Sun Apr 10 14:42:08 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
c883d9a
do., 10 de abr. de 2022 11:10:43: 
 tests:  4|5
total_score: 20/70
bee61e4
do., 10 de abr. de 2022 11:15:10: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 30/70
d20dd78
do., 10 de abr. de 2022 11:31:14: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
31c5a4e
do., 10 de abr. de 2022 11:31:58: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
12aab49
do., 10 de abr. de 2022 11:32:36: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0dc41d8
do., 10 de abr. de 2022 11:39:25: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 30/70
775868b
do., 10 de abr. de 2022 11:41:01: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:101:23: error: return makes pointer from integer without a cast [-Werror=int-conversion]
             return map->current;
                    ~~~^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dda1c78
do., 10 de abr. de 2022 11:46:34: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 40/70
1b122a6
do., 10 de abr. de 2022 11:54:41: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:80:23: error: statement with no effect [-Werror=unused-value]
             map->size +- 1;
             ~~~~~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
0ebd772
